index: fix alt tags

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
         <p class="description">Hello! I'm Mary! I do lots of stuff of questionable reasoning. My friends are probably a lot more interesting.</p>
 
 	<div class="badges">
-	  <a href="https://utsuho.rocks/" alt="Utsuho Rocks"><img src="/badge/utsuho.png"></a>
-	  <a href="https://foxwells.garden/" alt="Foxwells Garden"><img src="/badge/foxwells.png"></a>
-	  <a href="https://web.toaster.sh/" alt="Open-Source Toast"><img src="/badge/toast.png"></a>
-	  <a href="https://c7.pm/" alt="C7.PM"><img src="/badge/c7pm.gif"></a>
-	  <a href="https://elixi.re/" alt="elixi.re"><img src="/badge/elixire.gif"></a>
-	  <a href="https://notnite.com/" alt="NotNite"><img src="/badge/notnite.png"></a>
+	  <a href="https://utsuho.rocks/"><img alt="Utsuho Rocks" src="/badge/utsuho.png"></a>
+	  <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="/badge/foxwells.png"></a>
+	  <a href="https://web.toaster.sh/"><img alt="Open-Source Toast" src="/badge/toast.png"></a>
+	  <a href="https://c7.pm/"><img alt="C7.PM" src="/badge/c7pm.gif"></a>
+	  <a href="https://elixi.re/"><img alt="elixi.re" src="/badge/elixire.gif"></a>
+	  <a href="https://notnite.com/"><img alt="NotNite" src="/badge/notnite.png"></a>
 	</div>
       </div>
       <div class="directory pane">
