--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
       #tetris-bg, #background-js {
         min-height: 100vh;
         position: absolute;
-	user-select: none;
-	width: 100%;
-	bottom: 0;
+        user-select: none;
+        width: 100%;
+        bottom: 0;
       }
       #background-js {
         z-index: -2;
       }
       #tetris-bg {
-	z-index: -1;
+        z-index: -1;
       }
       .title .description {
         font-size: 21px;
@@ -77,9 +77,9 @@
           display: block;
           width: calc(100% - 2em);
         }
-	.directory.pane {
+        .directory.pane {
           text-align: center;
-	}
+        }
       }
 
       @keyframes blink-item {
@@ -101,12 +101,24 @@
         margin-top: 3em;
       }
 
+      @media tty {
+        .badges {
+          text-align: center;
+        }
+	.main {
+          display: block;
+	}
+	.directory-wrap {
+          display: inline-block;
+	}
+      }
+
       #tetris-score {
         top: 0;
-	font-size: 32px;
+        font-size: 32px;
         text-align: right;
         position: absolute;
-	z-index: -1;
+        z-index: -1;
       }
     </style>
     <script src="./tetris.js" defer></script>
@@ -118,14 +130,14 @@
         <h1>Mary's Internet Realm</h1>
         <p class="description">Hello! I'm Mary! I do lots of stuff of questionable reasoning. My friends are probably a lot more interesting.</p>
 
-	<div class="badges">
-	  <a href="https://utsuho.rocks/"><img alt="Utsuho Rocks" src="/badge/utsuho.png"></a>
-	  <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="/badge/foxwells.png"></a>
-	  <a href="https://web.toaster.sh/"><img alt="Open-Source Toast" src="/badge/toast.png"></a>
-	  <a href="https://c7.pm/"><img alt="C7.PM" src="/badge/c7pm.gif"></a>
-	  <a href="https://elixi.re/"><img alt="elixi.re" src="/badge/elixire.gif"></a>
-	  <a href="https://notnite.com/"><img alt="NotNite" src="/badge/notnite.png"></a>
-	</div>
+        <div class="badges">
+          <a href="https://utsuho.rocks/"><img alt="Utsuho Rocks" src="/badge/utsuho.png"></a>
+          <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="/badge/foxwells.png"></a>
+          <a href="https://web.toaster.sh/"><img alt="Open-Source Toast" src="/badge/toast.png"></a>
+          <a href="https://c7.pm/"><img alt="C7.PM" src="/badge/c7pm.gif"></a>
+          <a href="https://elixi.re/"><img alt="elixi.re" src="/badge/elixire.gif"></a>
+          <a href="https://notnite.com/"><img alt="NotNite" src="/badge/notnite.png"></a>
+        </div>
       </div>
       <div class="directory pane">
         <div class="directory-wrap">
