rel=me on socials

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         <div class="directory-wrap">
           <h2>Directory:</h2>
           <div class="item"><a href="/portfolio">Portfolio</a></div>
-          <div class="item"><a href="https://discord.com/users/196769986071625728">Discord</a></div>
-          <div class="item"><a href="https://gitlab.com/Mstrodl">Gitlab</a></div>
-          <div class="item"><a href="https://github.com/Mstrodl">GitHub</a></div>
-          <div class="item"><a href="mailto:ipadlover8322@gmail.com">Email</a></div>
+          <div class="item"><a rel="me" href="https://discord.com/users/196769986071625728">Discord</a></div>
+          <div class="item"><a rel="me" href="https://gitlab.com/Mstrodl">Gitlab</a></div>
+          <div class="item"><a rel="me" href="https://github.com/Mstrodl">GitHub</a></div>
+          <div class="item"><a rel="me" href="mailto:ipadlover8322@gmail.com">Email</a></div>
         </div>
       </div>
     </div>
