--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="badges">
           <a href="https://coolmathgames.tech/"><img alt="Mary's House" src="badge/maryhouse.png"></a>
           <a href="https://utsuho.rocks/"><img alt="Utsuho Rocks" src="badge/utsuho.png"></a>
-          <a href="https://wavetable.cymru/"><img alt="Wavetable CYMRU" src="badge/spork.png"></a>
+          <a href="https://wavetable.cymru/"><img alt="Wavetable CYMRU" src="badge/spork.gif"></a>
           <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="badge/foxwells.png"></a>
           <a href="https://web.toaster.sh/"><img alt="Open-Source Toast" src="badge/toast.png"></a>
           <a href="https://c7.pm/"><img alt="C7.PM" src="badge/c7pm.gif"></a>
