Made with Emacs

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           <a href="https://c7.pm/"><img alt="C7.PM" src="badge/c7pm.gif"></a>
           <a href="https://elixi.re/"><img alt="elixi.re" src="badge/elixire.gif"></a>
           <a href="https://notnite.com/"><img alt="NotNite" src="badge/notnite.png"></a>
+          <a href="https://gnu.org/software/emacs/"><img alt="Made With Emacs" src="badge/emacs.png"></a>
         </div>
       </div>
       <div class="directory pane">
