Modify Hack-Regular to only contain ascii range

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Mary's Internet Realm</title>
+
+    <meta property="og:title" content="Mary's Internet Realm" />
+    <meta property="og:description" content="Do you like TETRIS?" />
+    <meta property="og:image" content="badge/maryhouse.png" />
+
     <style>
       @font-face {
         font-family: Hack;
-        src: url(/Hack-Regular.ttf);
+        src: url(/Hack-Regular.woff2) U+21-U+7E;
       }
       html {
         background: #1a1a1a;
