move email, link to portfolio

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
       <div class="directory pane">
         <div class="directory-wrap">
           <h2>Directory:</h2>
-          <div class="item"><a href="/portfolio">Portfolio</a></div>
+          <div class="item"><a href="https://mstrodl.com">Portfolio</a></div>
           <div class="item"><a rel="me" href="https://discord.com/users/196769986071625728">Discord</a></div>
           <div class="item"><a rel="me" href="https://gitlab.com/Mstrodl">Gitlab</a></div>
           <div class="item"><a rel="me" href="https://github.com/Mstrodl">GitHub</a></div>
-          <div class="item"><a rel="me" href="mailto:ipadlover8322@gmail.com">Email</a></div>
+          <div class="item"><a rel="me" href="mailto:pubsite@coolmathgames.tech">Email</a></div>
         </div>
       </div>
     </div>
