index: wilnil.gay is only http

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <div class="badges">
           <a href="https://coolmathgames.tech/"><img alt="Mary's House" src="badge/maryhouse.png"></a>
-          <a href="https://wilnil.gay/"><img alt="Willard" src="badge/wilnil.png"></a>
+          <a href="http://wilnil.gay/"><img alt="Willard" src="badge/wilnil.png"></a>
           <a href="https://utsuho.rocks/"><img alt="Utsuho Rocks" src="badge/utsuho.png"></a>
           <a href="https://wavetable.cymru/"><img alt="Wavetable CYMRU" src="badge/spork.gif"></a>
           <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="badge/foxwells.png"></a>
