--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <a href="https://coolmathgames.tech/"><img alt="Mary's House" src="badge/maryhouse.png"></a>
           <a href="https://adryd.com/"><img alt="adryd" src="badge/adryd.png"></a>
           <a href="http://wilnil.gay/"><img alt="Willard" src="badge/wilnil.png"></a>
+          <a href="https://vhafener.com/"><img alt="Vivi" src="badge/vivi.png"></a>
           <a href="https://utsuho.rocks/"><img alt="Utsuho Rocks" src="badge/utsuho.png"></a>
           <a href="https://wavetable.cymru/"><img alt="Wavetable CYMRU" src="badge/spork.gif"></a>
           <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="badge/foxwells.png"></a>
