--- a/index.html
+++ b/index.html
@@ -147,9 +147,14 @@
           <a href="https://foxwells.garden/"><img alt="Foxwells Garden" src="badge/foxwells.png"></a>
           <a href="https://web.toaster.sh/"><img alt="Open-Source Toast" src="badge/toast.png"></a>
           <a href="https://c7.pm/"><img alt="C7.PM" src="badge/c7pm.gif"></a>
-          <a href="https://elixi.re/"><img alt="elixi.re" src="badge/elixire.gif"></a>
+          <a href="https://c7.pm/"><img alt="c7.pm" src="badge/c7pm.png"></a>
           <a href="https://notnite.com/"><img alt="NotNite" src="badge/notnite.png"></a>
+          <a href="https://l4.pm/"><img alt="luna" src="badge/luna.gif"></a>
+          <a href="https://elixi.re/"><img alt="elixi.re" src="badge/elixire.gif"></a>
           <a href="https://gnu.org/software/emacs/"><img alt="Made With Emacs" src="badge/emacs.png"></a>
+          <a href="https://proxmox.com/"><img alt="Proxmox" src="badge/proxmox.png"></a>
+          <a href="https://distrowatch.com/"><img alt="DistroWatch" src="badge/distrowatch.gif"></a>
+          <a href="http://toastytech.com/evil/index.html"><img alt="Internet Explorer is Evil!" src="badge/ieisevil.gif"></a>
         </div>
       </div>
       <div class="directory pane">
